--- a/assets/css/client.css
+++ b/assets/css/client.css
@@ -1,4 +1,3 @@
-@import url(client.min.css);
 *, *:before, *:after {
   padding: 0;
   margin: 0;
@@ -12,6 +11,15 @@ html, body {
 
 img {
   vertical-align: top;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 body {
