--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,3 @@
-@import "latest_works";
 
 $base_size:16;
 @mixin fz($px_size){
@@ -14,6 +13,7 @@ $base_size:16;
 html, body {
     width: 100%;
     height: 100%;
+
 }
 
 img {
@@ -23,6 +23,9 @@ img {
 body {
     background-color: #fff;
     font-family: Arial, Helvetica, sans-serif;
+    
+    
+
     font-size: 1rem;
     min-width:350px;
 }
@@ -30,5 +33,6 @@ body {
 .container {
     width: 90%;
     max-width: 1140px;
-    margin: 0 auto;
+    margin: 0 auto;   
 }
+@import "latest_works.scss";
