--- a/assets/css/client.scss
+++ b/assets/css/client.scss
@@ -20,6 +20,7 @@ img {
 ul,
 li {
     list-style: none;
+    display: inline-block;
 }
 a {
     text-decoration: none;
@@ -37,13 +38,30 @@ body {
     max-width:1140px;
     margin: 0 auto;
 }
-.clients {
+.clients {    
+    padding: 100px 0;
+    .clients_container {
     display: flex;
+    flex-direction: column;    
     justify-content: center;
-    align-items: center;
-    &_container {
-        &_title {
-            text-align: center;
+    align-items: center;    
+        .clients_title {
+        width: 30%;        
+        text-align: center;
+        padding: 5px 0;
+        @include fz(50);
+        line-height: 35px;
+        background:linear-gradient(90deg, rgba(0, 255, 235, 1) 15%, rgba(7, 58, 187, 1) 100%);        
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-fill-color: transparent;
+        margin-bottom: 85px;  
         }
-    }
+        .clients_list {        
+        display: flex;
+        justify-content: space-between;
+        }
+    }    
+    
 }
