--- a/assets/css/client.css
+++ b/assets/css/client.css
@@ -39,14 +39,9 @@ body {
 .clients {
   padding: 100px 0;
 }
-.clients .clients_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 .clients .clients_container .clients_title {
   width: 30%;
+  margin: 0 auto 85px;
   text-align: center;
   padding: 5px 0;
   font-size: 3.125rem;
@@ -56,9 +51,13 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-  margin-bottom: 85px;
 }
 .clients .clients_container .clients_list {
+  width: 100%;
   display: flex;
   justify-content: space-between;
+}
+.clients .clients_container .clients_list .clients_list_item a {
+  width: 100%;
+  height: 100%;
 }
