--- a/assets/css/client.scss
+++ b/assets/css/client.scss
@@ -40,13 +40,10 @@ body {
 }
 .clients {    
     padding: 100px 0;
-    .clients_container {
-    display: flex;
-    flex-direction: column;    
-    justify-content: center;
-    align-items: center;    
+    .clients_container {    
         .clients_title {
-        width: 30%;        
+        width: 30%;
+        margin: 0 auto 85px;        
         text-align: center;
         padding: 5px 0;
         @include fz(50);
@@ -55,12 +52,19 @@ body {
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
-        text-fill-color: transparent;
-        margin-bottom: 85px;  
+        text-fill-color: transparent;        
         }
-        .clients_list {        
+        .clients_list {
+        width: 100%;        
         display: flex;
         justify-content: space-between;
+            .clients_list_item { 
+            a {
+                width: 100%;
+                height: 100%;
+                
+            }
+        }
         }
     }    
     
