--- a/assets/css/symu_info.css
+++ b/assets/css/symu_info.css
@@ -32,9 +32,20 @@ body {
   margin: 0 auto;
 }
 
+.container_logo {
+  background-color: honeydew;
+  width: 100%;
+  max-width: 1190px;
+  height: 635px;
+  margin-top: 200px;
+}
+
 .circle {
   width: 360px;
   height: 360px;
   border-radius: 50%;
   background-color: gray;
+  display: flex;
+  align-items: center;
+  position: absolute;
 }
