--- a/assets/css/client.css
+++ b/assets/css/client.css
@@ -44,6 +44,7 @@ body {
   margin: 0 auto 85px;
   text-align: center;
   padding: 5px 0;
+  font-weight: 300;
   font-size: 3.125rem;
   line-height: 35px;
   background: linear-gradient(90deg, #00ffeb 15%, #073abb 100%);
@@ -60,4 +61,12 @@ body {
 .clients .clients_container .clients_list .clients_list_item a {
   width: 100%;
   height: 100%;
+  cursor: pointer;
+  filter: grayscale(100%);
+  opacity: 0.3;
+  transition: all 0.5s ease;
+}
+.clients .clients_container .clients_list .clients_list_item a:hover {
+  opacity: 1;
+  filter: grayscale(0);
 }
