--- a/assets/css/client.scss
+++ b/assets/css/client.scss
@@ -46,6 +46,7 @@ body {
         margin: 0 auto 85px;        
         text-align: center;
         padding: 5px 0;
+        font-weight: 300;
         @include fz(50);
         line-height: 35px;
         background:linear-gradient(90deg, rgba(0, 255, 235, 1) 15%, rgba(7, 58, 187, 1) 100%);        
@@ -62,7 +63,14 @@ body {
             a {
                 width: 100%;
                 height: 100%;
-                
+                cursor: pointer;
+                filter: grayscale(100%);
+                opacity: .3;
+                transition: all .5s ease;
+                &:hover {
+                    opacity: 1;
+                    filter: grayscale(0);
+                }                
             }
         }
         }
