--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ img {
 
 body {
   background-color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1rem;
   min-width: 350px;
 }
