--- a/assets/css/client.css
+++ b/assets/css/client.css
@@ -25,7 +25,7 @@ a {
 
 body {
   background-color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1rem;
   min-width: 350px;
 }
@@ -69,4 +69,10 @@ body {
 .clients .clients_container .clients_list .clients_list_item a:hover {
   opacity: 1;
   filter: grayscale(0);
+}
+
+@media screen and (max-width: 570px) {
+  .clients .clients_container .clients_title {
+    width: 90%;
+  }
 }
