--- a/assets/css/client.scss
+++ b/assets/css/client.scss
@@ -15,7 +15,7 @@ html, body {
 }
 
 img {
-    vertical-align: top;
+    vertical-align: top;    
 }
 ul,
 li {
@@ -28,7 +28,7 @@ a {
 
 body {
     background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 1rem;
     min-width:350px;
 }
@@ -70,10 +70,16 @@ body {
                 &:hover {
                     opacity: 1;
                     filter: grayscale(0);
-                }                
+                    }                
+                }
             }
-        }
         }
     }    
     
+}
+
+@media screen and (max-width:570px) {
+    .clients .clients_container .clients_title {
+        width: 90%;
+    }
 }
