--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 *, *:before, *:after {
   padding: 0;
   margin: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
 }
 
 html, body {
@@ -15,13 +15,13 @@ img {
 
 body {
   background-color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1rem;
   min-width: 350px;
 }
 
 .container {
   width: 90%;
-  max-width: 1400px;
+  max-width: 1140px;
   margin: 0 auto;
 }
