--- a/assets/css/regform.scss
+++ b/assets/css/regform.scss
@@ -3,3 +3,91 @@ $base_size:16;
     font-size:($px_size/$base_size)+rem;
 }
 
+.regform {
+    max-width: 812px;
+    margin: 0 auto;
+    border: 1px solid #999;
+    padding: 62px 146px 60px;
+    &__title {
+        @include fz(50);
+        color: #3677fd;
+        text-align: center;
+        margin: 0 auto 54px;
+    }
+}
+
+.rg-form {
+    &__item {
+        position: relative;
+    }
+    &__input {
+        width: 100%;
+        height: 45px;
+        border: 1px solid #5a5a5a;
+        color: #5a5a5a;
+        border-radius: 10px;
+        padding: 16px 0 16px 21px;
+        margin-bottom: 14px;
+        cursor: pointer;
+        &::placeholder {
+            color: transparent;
+        }
+        &, & + .rg-form__label {
+            line-height: 1;
+            font: inherit;
+            padding: 0.9em 0.4em;
+            height: 3em;
+            position: relative;
+        }
+        & + .rg-form__label {
+            position: absolute;
+            left: 3%;
+            user-select: none;
+            color: #5a5a5a;
+            transition: transform 0.25s ease-in-out;
+            transform-origin: 0 0;
+            opacity: 0.7;
+        }
+        &:focus,
+        &:not(:placeholder-shown) {
+            padding: 8px 0 0 15px;
+            
+            & + .rg-form__label {
+                transform: translate(1%, -15%) scale(0.7);
+            }
+        }
+    }
+
+    
+    &__btn {
+        display: block;
+        margin: 0 auto 20px;
+        width: 205px;
+        height: 55px;
+        background-color: #3695ff;
+        color: #fff;
+        font-weight: 700;
+        text-transform: uppercase;
+        border: none;
+        border-radius: 24px;
+        letter-spacing: 1px;
+    }
+    &__sign {
+        color: #5a5a5a;
+        text-align: center;
+        margin-bottom: 14px;
+    }
+
+    &__link-wrap {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    &__link {
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+    }
+}
+
