--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,17 +26,32 @@ body {
   margin: 0 auto;
 }
 
+#modal-reg {
+  display: flex;
+  opacity: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-reg-over {
+  background: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(4px);
+  z-index: 999;
+  height: 100vh;
+}
+
 .regform {
+  z-index: 1000;
+  background-color: #fff;
   max-width: 812px;
-  margin: 0 auto;
-  border: 1px solid #999;
-  padding: 62px 146px 60px;
+  min-height: 500px;
+  padding: 20px 146px 20px;
 }
 .regform__title {
   font-size: 3.125rem;
   color: #3677fd;
   text-align: center;
-  margin: 0 auto 54px;
+  margin: 0 auto 30px;
 }
 
 .rg-form__item {
