added gradient to button

--- a/assets/css/regform.scss
+++ b/assets/css/regform.scss
@@ -83,7 +83,7 @@ $base_size:16;
         margin: 0 auto 20px;
         width: 205px;
         height: 55px;
-        background-color: #3695ff;
+        background: linear-gradient(to right, #3695ff 0%, #3677fd 100% );
         color: #fff;
         font-weight: 700;
         text-transform: uppercase;
