--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ body {
   margin: 0 auto 20px;
   width: 205px;
   height: 55px;
-  background-color: #3695ff;
+  background: linear-gradient(to right, #3695ff 0%, #3677fd 100%);
   color: #fff;
   font-weight: 700;
   text-transform: uppercase;
