add files to hire_me

--- a/assets/css/hire_me.scss
+++ b/assets/css/hire_me.scss
@@ -1,15 +1,22 @@
+$base_size:16;
+
+@mixin fz($px_size) {
+    font-size: ($px_size/$base_size)+rem;
+}
+
 %btn {
     display: inline-block;
     height: 55px;
     width: 204px;
     line-height: 46px;
-    padding: 0 20px;
+    padding: 0 15px;
     border-radius: 30px;
     font-family: 'serif';
     font-weight: 400;
     font-size: 18px;
     cursor: pointer;
     color: #fff;
+    text-align: center;
 }
 
 %btn-blue {
@@ -22,26 +29,69 @@
     }
 }
 
+// .page-overlay {
+//     display: none;
+//     position: fixed;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(0, 0, 0, .7);
+//     z-index: 999;
+//     backdrop-filter: blur(2px);
+// }
+
+
+.overlay-form {
+    position: fixed;
+    margin: 0 auto;
+    // max-width: 810px;
+    // display: none;
+    // top: 100px;
+    top: 5vh;
+    left: 35%;
+    // left: -110%;
+    height: 100vh;
+    width: 100%;
+    // width: 100vh;
+    // width: 810px;
+    // height: 100vh;
+    // height: 620px;
+    // z-index: 99;
+    // opacity: 1;
+    // z-index: -1;
+    // opacity: 0;
+    // overflow: hidden;
+    transition: all .4s ease;
+    z-index: 1000;
+    max-width: 810px;
+}
+
+.overlay-form .close-btn {
+    position: absolute;
+    // padding: 5px;
+    right: 10px;
+    color: #3695ff;
+    @include fz(50);
+    font-weight: 200;
+    cursor: pointer;
+}
 
 .hire {
-    background: #10254b;
-
+    // max-width: 810px;
 
     &__me {
-        padding: 100px 145px 158px;
+        padding: 65px 145px 60px;
         background-color: #fff;
-        max-width: 813px;
         border: 1px solid #fff;
         border-radius: 10px;
         margin: 0 auto;
     }
 
-    &__container {
-        margin: 0 auto;
-    }
-
-    &__form {
-        // padding: 0 145px 158px;
+    &__title {
+        text-align: center;
+        @include fz (45);
+        // font-weight: 200;
+        color: #3677fd;
+        padding-bottom: 60px;
     }
 
     &__field {
@@ -49,7 +99,7 @@
         outline: none;
         border: none;
         border: 1px solid #b7c0c9;
-        border-radius: 5px;
+        border-radius: 10px;
         margin-bottom: 15px;
     }
 
