--- a/assets/css/hire_me.css
+++ b/assets/css/hire_me.css
@@ -3,13 +3,14 @@
   height: 55px;
   width: 204px;
   line-height: 46px;
-  padding: 0 20px;
+  padding: 0 15px;
   border-radius: 30px;
   font-family: "serif";
   font-weight: 400;
   font-size: 18px;
   cursor: pointer;
   color: #fff;
+  text-align: center;
 }
 
 .hire .btn-blue {
@@ -21,26 +22,46 @@
   border-color: #10254b;
 }
 
-.hire {
-  background: #10254b;
+.overlay-form {
+  position: fixed;
+  margin: 0 auto;
+  top: 5vh;
+  left: 35%;
+  height: 100vh;
+  width: 100%;
+  transition: all 0.4s ease;
+  z-index: 1000;
+  max-width: 810px;
 }
+
+.overlay-form .close-btn {
+  position: absolute;
+  right: 10px;
+  color: #3695ff;
+  font-size: 3.125rem;
+  font-weight: 200;
+  cursor: pointer;
+}
+
 .hire__me {
-  padding: 100px 145px 158px;
+  padding: 65px 145px 60px;
   background-color: #fff;
-  max-width: 813px;
   border: 1px solid #fff;
   border-radius: 10px;
   margin: 0 auto;
 }
-.hire__container {
-  margin: 0 auto;
+.hire__title {
+  text-align: center;
+  font-size: 2.8125rem;
+  color: #3677fd;
+  padding-bottom: 60px;
 }
 .hire__field {
   width: 100%;
   outline: none;
   border: none;
   border: 1px solid #b7c0c9;
-  border-radius: 5px;
+  border-radius: 10px;
   margin-bottom: 15px;
 }
 .hire__name, .hire__mail {
