--- a/assets/css/regform.css
+++ b/assets/css/regform.css
@@ -6,28 +6,39 @@
 }
 
 .modal-reg-over {
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(4px);
   z-index: 999;
-  height: 100vh;
 }
 
 .regform {
   z-index: 1000;
   background-color: #fff;
-  max-width: 812px;
+  width: 812px;
   min-height: 500px;
-  padding: 20px 146px 20px;
+  padding: 48px 146px 20px;
+  border-radius: 10px;
 }
 .regform__title {
   font-size: 3.125rem;
+  font-weight: 400;
   color: #3677fd;
   text-align: center;
-  margin: 0 auto 30px;
+  margin: 0 auto 20px;
 }
 
 .rg-form__item {
   position: relative;
+  margin-bottom: 15px;
+}
+.rg-form__item:nth-child(3) {
+  margin-bottom: 30px;
 }
 .rg-form__input {
   width: 100%;
@@ -36,7 +47,6 @@
   color: #5a5a5a;
   border-radius: 10px;
   padding: 16px 0 16px 21px;
-  margin-bottom: 14px;
   cursor: pointer;
 }
 .rg-form__input::placeholder {
@@ -66,7 +76,7 @@
 }
 .rg-form__btn {
   display: block;
-  margin: 0 auto 20px;
+  margin: 0 auto;
   width: 205px;
   height: 55px;
   background: linear-gradient(to right, #3695ff 0%, #3677fd 100%);
@@ -101,4 +111,8 @@
 }
 .rg-form__link:hover {
   transform: scale(1.1);
+}
+
+.reg-btn {
+  margin-bottom: 15px;
 }
