--- a/assets/css/regform.scss
+++ b/assets/css/regform.scss
@@ -11,33 +11,41 @@ $base_size:16;
 }
 
 .modal-reg-over {
-    // position: fixed;
-    // top: 0;
-    // left: 0;
-    // overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
     background: rgba(0,0,0,.8);
     backdrop-filter: blur(4px);
     z-index: 999;
-    height: 100vh;
 }
 
 .regform {
     z-index: 1000;
     background-color: #fff;
-    max-width: 812px;
+    width: 812px;
     min-height: 500px;
-    padding: 20px 146px 20px;
+    padding: 48px 146px 20px;
+    border-radius: 10px;
     &__title {
         @include fz(50);
+        font-weight: 400;
         color: #3677fd;
         text-align: center;
-        margin: 0 auto 30px;
+        margin: 0 auto 20px;
     }
 }
 
 .rg-form {
+    
     &__item {
         position: relative;
+        margin-bottom: 15px;
+        &:nth-child(3) {
+            margin-bottom: 30px;
+        }
     }
     &__input {
         width: 100%;
@@ -45,9 +53,9 @@ $base_size:16;
         border: 1px solid #5a5a5a;
         color: #5a5a5a;
         border-radius: 10px;
-        padding: 16px 0 16px 21px;
-        margin-bottom: 14px;
+        padding: 16px 0 16px 21px;      
         cursor: pointer;
+       
         &::placeholder {
             color: transparent;
         }
@@ -80,7 +88,7 @@ $base_size:16;
     
     &__btn {
         display: block;
-        margin: 0 auto 20px;
+        margin: 0 auto;
         width: 205px;
         height: 55px;
         background: linear-gradient(to right, #3695ff 0%, #3677fd 100% );
@@ -120,3 +128,6 @@ $base_size:16;
     }
 }
 
+.reg-btn {
+    margin-bottom: 15px;
+}
