--- a/assets/css/hire_me.scss
+++ b/assets/css/hire_me.scss
@@ -12,14 +12,14 @@ $base_size:16;
     padding: 0 15px;
     border-radius: 30px;
     font-family: 'serif';
-    font-weight: 400;
     font-size: 18px;
     cursor: pointer;
-    color: #fff;
     text-align: center;
+    font-family: 'Lato';
 }
 
 %btn-blue {
+    color: #fff;
     background-color: #3695ff;
     border: 1px solid #3695ff;
 
@@ -29,69 +29,96 @@ $base_size:16;
     }
 }
 
-// .page-overlay {
-//     display: none;
-//     position: fixed;
-//     width: 100%;
-//     height: 100%;
-//     background-color: rgba(0, 0, 0, .7);
-//     z-index: 999;
-//     backdrop-filter: blur(2px);
-// }
+body {
+    background: #367cfd;
+}
 
-
-.overlay-form {
+.hire_overlay {
+    display: block;
     position: fixed;
-    margin: 0 auto;
-    // max-width: 810px;
-    // display: none;
-    // top: 100px;
-    top: 5vh;
-    left: 35%;
-    // left: -110%;
-    height: 100vh;
     width: 100%;
-    // width: 100vh;
-    // width: 810px;
-    // height: 100vh;
-    // height: 620px;
-    // z-index: 99;
-    // opacity: 1;
-    // z-index: -1;
-    // opacity: 0;
-    // overflow: hidden;
-    transition: all .4s ease;
-    z-index: 1000;
-    max-width: 810px;
+    height: 100%;
+    background-color: rgba(0,0,0,.7);
+    z-index: -1;
+    backdrop-filter: blur(5px);
 }
 
-.overlay-form .close-btn {
-    position: absolute;
-    // padding: 5px;
-    right: 10px;
-    color: #3695ff;
-    @include fz(50);
-    font-weight: 200;
-    cursor: pointer;
-}
 
-.hire {
-    // max-width: 810px;
-
-    &__me {
-        padding: 65px 145px 60px;
-        background-color: #fff;
+.hire {   
+    &__main {
+        position: fixed;
+        // position: absolute;
+        // margin: 0 auto;
+        top: 0;
+        left: 0;
+        width: 100%;
+        // height: 100%;
+        margin-left: 35%;
+        z-index: 99;
+        opacity: 0;
+        padding: 50px 145px 60px;
+        background: #fff;
         border: 1px solid #fff;
         border-radius: 10px;
-        margin: 0 auto;
+        transition: all .4s ease;
+        // transition: top 500ms ease-in-out,
+        // opacity 500ms ease-in-out,
+        // height 0ms ease-in-out 500ms;
+
+        @media screen and (max-width: 1600px) {
+            margin-left: 25%;
+        }
+        @media screen and (max-width: 1300px) {
+            margin-left: 20%;
+        }
+        @media screen and (max-width: 1150px) {
+            margin-left: 15%;
+        }
+        @media screen and (max-width: 1050px) {
+            margin-left: 10%;
+        }
+        @media screen and (max-width: 1000px) {
+            padding: 40px 90px 50px;
+        }
+        @media screen and (max-width: 850px) {
+            margin-left: 5%;
+            padding: 30px 60px 40px;
+        }
+        @media screen and (max-width: 600px) {
+            padding: 30px 30px 30px;
+        }
+        @media screen and (max-width: 365px), (max-height: 700px) {
+            margin-left: 3%;
+            padding: 30px 10px 25px;
+        }
+    } 
+
+    .overlay-form .close-btn {
+        position: absolute;
+        top: 0;
+        right: 10px;
+        color: #3677fd;
+        font-size: 50px;
+        font-weight: 400;
+        cursor: pointer;
     }
 
     &__title {
         text-align: center;
         @include fz (45);
-        // font-weight: 200;
+        font-weight: 400;
         color: #3677fd;
-        padding-bottom: 60px;
+        padding-bottom: 50px;
+            @media screen and (max-width: 365px), (max-height: 700px) {
+            padding-bottom: 20px;
+        }
+    }
+
+    &__textarea {
+        padding-bottom: 30px;
+        @media screen and (max-width: 365px), (max-height: 700px) {
+            padding-bottom: 15px;
+        }
     }
 
     &__field {
@@ -101,6 +128,8 @@ $base_size:16;
         border: 1px solid #b7c0c9;
         border-radius: 10px;
         margin-bottom: 15px;
+        color: #acacac;
+        @include fz(17);
     }
 
     &__name,
@@ -109,10 +138,12 @@ $base_size:16;
     }
 
     &__message {
+        max-height: 180px;
         resize: none;
-        color: #acacac;
         padding: 15px 0 0 10px;
-        margin-bottom: 45px;
+        @media screen and (max-width: 365px), (max-height: 700px) {
+            max-height: 140px;
+        }
     }
 
     &__field::placeholder {
@@ -127,5 +158,55 @@ $base_size:16;
     .btn-blue {
         @extend %btn;
         @extend %btn-blue;
+        font-weight: 400;
+    }
+
+    .virtual__button {
+        position: absolute;
+        top: 95%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .btn-white {
+        @extend %btn;
+        color: #3695ff;
+        background-color: #fff;
+        border: 1px solid #fff;
+        font-weight: 700;
+    
+        &:hover {
+            background: #10254b;
+            border-color: #10254b;
+        }
     }
 }
+
+body.activeForm .overlay-form {
+    z-index: 2;
+    opacity: 1;
+    top: 10vh;
+    max-width: 810px;
+    transition: top 500ms ease-in-out,
+    opacity 500ms ease-in-out,
+    height 0ms ease-in-out 0ms;
+
+    @media screen and (max-width: 1000px) {
+        max-width: 700px;
+    }
+    @media screen and (max-width: 850px) {
+        max-width: 550px;
+    }
+    @media screen and (max-width: 600px) {
+        max-width: 400px;
+    }
+    @media screen and (max-width: 450px) {
+        top: 5vh;
+        max-width: 330px;
+    }
+    @media screen and (max-width: 365px), (max-height: 700px) {
+        max-width: 300px;
+    }
+}
+
+
