--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,15 +1,19 @@
 $base_size:16;
-@mixin fz($px_size){
-    font-size:($px_size/$base_size)+rem;
+
+@mixin fz($px_size) {
+    font-size: ($px_size/$base_size)+rem;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
 }
@@ -22,11 +26,13 @@ body {
     background-color: #fff;
     font-family: 'Lato', sans-serif;
     font-size: 1rem;
-    min-width:350px;
+    min-width: 350px;
 }
 
 .container {
     width: 90%;
-    max-width:1140px;
+    max-width: 1140px;
     margin: 0 auto;
 }
+
+@import 'About_me.min';
