--- a/assets/css/main_top_part.css
+++ b/assets/css/main_top_part.css
@@ -15,14 +15,13 @@ img {
 
 body {
   background-color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
   min-width: 350px;
 }
 
 .container {
   width: 90%;
-  max-width: 1400px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -143,5 +142,66 @@ body {
   100% {
     opacity: 0;
     transform: translateY(4.8rem) scale(0.5);
+  }
+}
+@media screen and (max-width: 1200px) {
+  .main_top_part .content_main_top_part .text_main_top_part h1 {
+    font-size: 2.5rem;
+  }
+  .main_top_part .content_main_top_part .text_main_top_part p {
+    padding-top: 25px;
+    line-height: 25px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .main_top_part .content_main_top_part .text_main_top_part {
+    padding-left: 7%;
+    padding-right: 7%;
+  }
+  .main_top_part .content_main_top_part .text_main_top_part h1 {
+    font-size: 1.875rem;
+  }
+  .main_top_part .content_main_top_part .text_main_top_part p {
+    padding-top: 25px;
+    line-height: 25px;
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 800px) {
+  .main_top_part .content_main_top_part .text_main_top_part {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .main_top_part .content_main_top_part .text_main_top_part h1 {
+    font-size: 1.5625rem;
+  }
+  .main_top_part .content_main_top_part .text_main_top_part p {
+    padding-top: 25px;
+    line-height: 25px;
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .main_top_part .content_main_top_part .img_main_top_part {
+    text-align: center;
+  }
+  .main_top_part .content_main_top_part .img_main_top_part img {
+    width: 70%;
+  }
+  .main_top_part .content_main_top_part .text_main_top_part {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .main_top_part .content_main_top_part .text_main_top_part h1 {
+    font-size: 1.25rem;
+  }
+  .main_top_part .content_main_top_part .text_main_top_part p {
+    padding-top: 25px;
+    line-height: 15px;
+    font-size: 0.875rem;
+  }
+  .main_top_part .content_main_top_part .btn_main_top_part {
+    height: 40px;
+    width: 160px;
   }
 }
