--- a/assets/css/main_top_part.scss
+++ b/assets/css/main_top_part.scss
@@ -20,17 +20,15 @@ img {
 
 body {
     background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
     min-width:350px;
 }
 
 .container {
     width: 90%;
-    max-width:1400px;
+    max-width:1140px;
     margin: 0 auto;
 }
-
 
 .main_top_part {
     font-family: 'Lato', sans-serif;
@@ -154,4 +152,123 @@ $base: 0.6rem;
   opacity: 0;
   transform: translateY($base * 8) scale(0.5);
  }
+}
+
+@media screen and (max-width:1200px){
+    .main_top_part {
+        .content_main_top_part {
+            .img_main_top_part {
+
+            }
+            .text_main_top_part {
+                h1 {
+                    @include fz(40);
+
+                }
+                p {
+                    padding-top: 25px;
+                    line-height: 25px;
+                }
+            }
+            .btn_main_top_part {
+
+            }
+            .arrow_main_top_part {
+
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1000px){
+    .main_top_part {
+        .content_main_top_part {
+            .img_main_top_part {
+
+            }
+            .text_main_top_part {
+                padding-left: 7%;
+                padding-right: 7%;
+                h1 {
+                    @include fz(30);
+
+                }
+                p {
+                    padding-top: 25px;
+                    line-height: 25px;
+                    @include fz(16);
+                }
+            }
+            .btn_main_top_part {
+                
+            }
+            .arrow_main_top_part {
+
+            }
+        }
+    }
+}
+
+@media screen and (max-width:800px){
+    .main_top_part {
+        .content_main_top_part {
+            .img_main_top_part {
+                img {
+                }
+            }
+            .text_main_top_part {
+                padding-left: 5%;
+                padding-right: 5%;
+                h1 {
+                    @include fz(25);
+
+                }
+                p {
+                    padding-top: 25px;
+                    line-height: 25px;
+                    @include fz(16);
+                }
+            }
+            .btn_main_top_part {
+                
+            }
+            .arrow_main_top_part {
+
+            }
+        }
+    }
+}
+
+@media screen and (max-width:600px){
+    .main_top_part {
+        .content_main_top_part {
+            .img_main_top_part {
+                text-align: center;
+                img {
+                    width: 70%;
+                    
+                }
+            }
+            .text_main_top_part {
+                padding-left: 5%;
+                padding-right: 5%;
+                h1 {
+                    @include fz(20);
+
+                }
+                p {
+                    padding-top: 25px;
+                    line-height: 15px;
+                    @include fz(14);
+                }
+            }
+            .btn_main_top_part {
+                height: 40px;
+                width: 160px;
+            }
+            .arrow_main_top_part {
+
+            }
+        }
+    }
 }
