--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url(main_top_part.scss);
 *, *:before, *:after {
   padding: 0;
   margin: 0;
@@ -24,124 +25,4 @@ body {
   width: 90%;
   max-width: 1400px;
   margin: 0 auto;
-}
-
-.main_top_part {
-  font-family: "Lato", sans-serif;
-  height: 100vh;
-  background-image: linear-gradient(45deg, #3695ff, #469dff, #469dff, #3c8ffe, #367ffe, #3672fd);
-}
-.main_top_part .content_main_top_part {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  color: #fff;
-}
-.main_top_part .content_main_top_part .img_main_top_part img {
-  border-radius: 50%;
-  box-shadow: 10px 10px 50px rgba(255, 255, 255, 0.5);
-}
-.main_top_part .content_main_top_part .img_main_top_part img:hover {
-  box-shadow: 10px 10px 100px rgba(255, 255, 255, 0.7);
-}
-.main_top_part .content_main_top_part .text_main_top_part {
-  text-transform: uppercase;
-  text-align: center;
-  padding-left: 10%;
-  padding-right: 10%;
-}
-.main_top_part .content_main_top_part .text_main_top_part h1 {
-  font-weight: 900;
-  font-size: 3.125rem;
-  letter-spacing: 2px;
-}
-.main_top_part .content_main_top_part .text_main_top_part p {
-  font-weight: 300;
-  padding-top: 15px;
-  font-size: 1.125rem;
-  line-height: 35px;
-}
-.main_top_part .content_main_top_part .btn_main_top_part {
-  text-transform: uppercase;
-  color: #469dff;
-  font-weight: 700;
-  font-size: 1rem;
-  background-color: #fff;
-  border: 2px solid #fff;
-  border-radius: 50px;
-  height: 60px;
-  width: 200px;
-}
-.main_top_part .content_main_top_part .btn_main_top_part:hover {
-  background-color: #50cceb;
-  color: #fff;
-}
-
-.arrow_main_top_part {
-  position: relative;
-  padding-bottom: 55px;
-}
-
-.container_arrow {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-}
-
-.chevron {
-  position: absolute;
-  width: 2.1rem;
-  height: 0.48rem;
-  opacity: 0;
-  transform: scale(0.3);
-  animation: move-chevron 3s ease-out infinite;
-}
-
-.chevron:first-child {
-  animation: move-chevron 3s ease-out 1s infinite;
-}
-
-.chevron:nth-child(2) {
-  animation: move-chevron 3s ease-out 2s infinite;
-}
-
-.chevron:before,
-.chevron:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 50%;
-  background-image: linear-gradient(360deg, #fff, #3b95ac, #50cceb);
-}
-
-.chevron:before {
-  left: 0;
-  transform: skewY(30deg);
-}
-
-.chevron:after {
-  right: 0;
-  width: 50%;
-  transform: skewY(-30deg);
-}
-
-@keyframes move-chevron {
-  25% {
-    opacity: 1;
-  }
-  33.3% {
-    opacity: 1;
-    transform: translateY(2.28rem);
-  }
-  66.6% {
-    opacity: 1;
-    transform: translateY(3.12rem);
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(4.8rem) scale(0.5);
-  }
 }
