--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,8 +31,8 @@ body {
 
 .container {
     width: 90%;
-    max-width:1140px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 
-@import 'symu_info.min.css'
+@import 'symu_info.min.css';
