--- a/assets/css/symu_info.css
+++ b/assets/css/symu_info.css
@@ -17,8 +17,8 @@ img {
 }
 
 body {
-  background-color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: white;
+  font-family: "Lato", sans-serif;
   font-size: 1rem;
   min-width: 350px;
 }
@@ -32,9 +32,63 @@ body {
   margin: 0 auto;
 }
 
+.container_logo {
+  border-radius: 1%;
+  width: 100%;
+  max-width: 1190px;
+  height: 635px;
+  margin-top: 200px;
+  background-color: white;
+}
+
 .circle {
   width: 360px;
   height: 360px;
   border-radius: 50%;
-  background-color: gray;
+  display: flex;
+  background-color: #fff;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-top: 20px;
+  -webkit-box-shadow: 0px 0px 30px 21px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 0px 30px 21px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 0px 30px 21px rgba(34, 60, 80, 0.2);
+}
+
+.container_text {
+  padding-top: 265px;
+  text-align: center;
+  color: #dc2e44;
+  font-size: 24px;
+  letter-spacing: 2px;
+  line-height: 62px;
+}
+
+span {
+  font-size: 24px;
+  font-weight: 400;
+  color: #b9bcd1;
+}
+
+.btn {
+  position: absolute;
+  margin: 29% 29%;
+  width: 285px;
+  height: 90px;
+  background-color: #eb304d;
+  border-radius: 3px;
+  border: none;
+  text-align: center;
+  padding-top: 35px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.btn:hover {
+  background-color: #06196d;
+  transition: all 0.7s ease;
 }
