--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 *, *:before, *:after {
   padding: 0;
   margin: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
 }
 
 html, body {
@@ -15,13 +15,94 @@ img {
 
 body {
   background-color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1rem;
   min-width: 350px;
 }
 
 .container {
   width: 90%;
-  max-width: 1400px;
+  max-width: 1140px;
   margin: 0 auto;
+}
+
+*, *:before, *:after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+img {
+  vertical-align: top;
+}
+
+body {
+  background-color: #f1f8ff;
+  font-family: "Lato", sans-serif;
+  font-size: 1rem;
+  min-width: 350px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  width: 90%;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.expert {
+  padding: 95px 0 110px 0;
+}
+.expert .expert__title {
+  margin-bottom: 120px;
+}
+.expert .expert__title .title__text {
+  font-size: 3.125rem;
+  font-weight: 100;
+  color: #3677fd;
+  text-align: center;
+}
+.expert .expert__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+.expert .expert__grid-colums {
+  text-align: center;
+  margin-bottom: 100px;
+  position: relative;
+}
+.expert .expert__grid-icon {
+  margin: 0 auto 60px;
+  border: 1px solid #bac3cc;
+  border-radius: 50%;
+  width: 140px;
+  height: 140px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.expert .expert__grid-title {
+  padding: 0 10px;
+}
+.expert .expert__grid-title h2 {
+  font-size: 1.5rem;
+  color: #3677fd;
+  font-weight: 700;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+.expert .expert__grid-title p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 32px;
+  color: #000;
 }
