--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,16 +17,15 @@ html, body {
 img {
     vertical-align: top;
 }
-
 body {
     background-color: #fff;
     font-family: 'Lato', sans-serif;
     font-size: 1rem;
     min-width:350px;
 }
-
 .container {
     width: 90%;
     max-width:1140px;
     margin: 0 auto;
 }
+@import "expert";
