--- a/assets/css/hire_me.scss
+++ b/assets/css/hire_me.scss
@@ -29,16 +29,12 @@ $base_size:16;
     }
 }
 
-body {
-    background: #367cfd;
-}
-
 .hire_overlay {
     display: block;
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(128, 129, 131, 0.7);
     z-index: -1;
     backdrop-filter: blur(5px);
 }
